--- a/src/main/resources/com/example/golffx/golfiValjak.fxml
+++ b/src/main/resources/com/example/golffx/golfiValjak.fxml
@@ -10,67 +10,83 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-            prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="com.example.golffx.Golfiväljak">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.golffx.Golfiväljak">
     <bottom>
         <HBox alignment="CENTER" prefHeight="47.0" prefWidth="600.0" spacing="50.0" BorderPane.alignment="CENTER">
             <children>
-                <Button mnemonicParsing="false" onAction="#valiValijakNupp" text="Tagasi"/>
-                <Button mnemonicParsing="false" onAction="#golfilöök" text="Alusta mängu"/>
+                <Button mnemonicParsing="false" onAction="#valiValijakNupp" text="Tagasi" />
             </children>
         </HBox>
     </bottom>
     <top>
-        <Label text="Vali Kepp" BorderPane.alignment="CENTER">
+        <Label alignment="CENTER" contentDisplay="TOP" prefHeight="45.0" prefWidth="607.0" text="Golfimäng" BorderPane.alignment="CENTER">
             <font>
-                <Font size="24.0"/>
+                <Font size="24.0" />
             </font>
             <padding>
-                <Insets top="10.0"/>
+                <Insets top="10.0" />
             </padding>
         </Label>
     </top>
     <left>
         <ListView fx:id="kepid" editable="true" prefHeight="200.0" prefWidth="200.0" BorderPane.alignment="CENTER">
             <padding>
-                <Insets left="20.0" right="20.0"/>
+                <Insets left="20.0" right="20.0" />
             </padding>
         </ListView>
     </left>
     <center>
         <VBox prefHeight="200.0" prefWidth="100.0" BorderPane.alignment="CENTER">
             <padding>
-                <Insets top="10.0"/>
+                <Insets top="10.0" />
             </padding>
             <children>
                 <Label fx:id="radaLabel" alignment="CENTER" prefHeight="17.0" prefWidth="402.0" text="Rada nr1">
                     <font>
-                        <Font size="24.0"/>
+                        <Font size="24.0" />
                     </font>
                 </Label>
                 <ProgressBar fx:id="radaBar" prefHeight="66.0" prefWidth="400.0" progress="0.0">
                     <padding>
-                        <Insets left="10.0" right="10.0" top="20.0"/>
+                        <Insets left="10.0" right="10.0" top="20.0" />
                     </padding>
                 </ProgressBar>
-                <Label prefHeight="17.0" prefWidth="473.0" text="Löökide arv">
+                <Button mnemonicParsing="false" onAction="#golfilöök" prefHeight="46.0" prefWidth="276.0" text="Löök">
+               <font>
+                  <Font size="22.0" />
+               </font>
+               <VBox.margin>
+                  <Insets top="20.0" />
+               </VBox.margin>
+            </Button>
+            <Label fx:id="löökLabel" prefHeight="17.0" prefWidth="337.0" text="">
+               <font>
+                  <Font size="20.0" />
+               </font>
+            </Label>
+                <Label fx:id="kaugus" alignment="CENTER" prefHeight="63.0" prefWidth="272.0" text="" wrapText="true">
                     <padding>
-                        <Insets left="20.0" top="20.0"/>
+                        <Insets left="20.0" top="20.0" />
                     </padding>
                     <font>
-                        <Font size="22.0"/>
-                    </font>
-                </Label>
-                <Label prefHeight="17.0" prefWidth="473.0" text="Kaugus august">
-                    <padding>
-                        <Insets left="20.0" top="20.0"/>
-                    </padding>
-                    <font>
-                        <Font size="22.0"/>
+                        <Font size="15.0" />
                     </font>
                 </Label>
             </children>
         </VBox>
     </center>
+   <right>
+      <VBox prefHeight="308.0" prefWidth="130.0" BorderPane.alignment="CENTER">
+         <children>
+                <Label prefHeight="59.0" prefWidth="130.0" text="Löökide arv">
+                    <padding>
+                        <Insets left="20.0" top="20.0" />
+                    </padding>
+                    <font>
+                        <Font size="15.0" />
+                    </font>
+                </Label>
+         </children>
+      </VBox>
+   </right>
 </BorderPane>
