--- a/src/main/resources/com/example/golffx/golfiValjak.fxml
+++ b/src/main/resources/com/example/golffx/golfiValjak.fxml
@@ -59,18 +59,15 @@
                   <Insets top="20.0" />
                </VBox.margin>
             </Button>
-            <Label fx:id="löökLabel" prefHeight="64.0" prefWidth="270.0" text="">
+            <Label fx:id="löökLabel" prefHeight="64.0" prefWidth="270.0" text="" textFill="#37c92a" wrapText="true">
                <font>
                   <Font size="15.0" />
                </font>
             </Label>
-                <Label fx:id="kaugus" alignment="CENTER" prefHeight="45.0" prefWidth="270.0" text="" wrapText="true">
+                <Label fx:id="kaugusLabel" alignment="CENTER" prefHeight="45.0" prefWidth="270.0" text="" wrapText="true">
                     <padding>
                         <Insets left="20.0" top="20.0" />
                     </padding>
-                    <font>
-                        <Font size="9.0" />
-                    </font>
                 </Label>
             </children>
         </VBox>
